--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir=build --minify=false"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
