--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: 'Build and Deploy'
 on:
   push:
     branches:
@@ -21,7 +21,7 @@ jobs:
           npm run build
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.6.1
+        uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_GITHUB }}
           BRANCH: dev-preview
