--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -10,7 +10,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout # check out the source code of repo branch dev into runner then run command against the source code below
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
