--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
+
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
 /build
+
+# misc
+.DS_Store
+*.pem
 /dist
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env
+
+# vercel
+.vercel
