--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
   },
   "homepage": "https://github.com/oktesting/oktesting.github.io#readme",
   "dependencies": {
+    "@notionhq/client": "^0.4.12",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "next-themes": "0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
     "sass": "^1.45.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.15",
     "vite": "^2.6.14"
   }
 }
