--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -12,10 +12,13 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: create .env file
+        run: |
+          touch .env
+          echo REVIEWS_PAGE_ID=${{ secrets.REVIEWS_PAGE_ID }} >> .env
+          echo NOTION_TOKEN=${{ secrets.NOTION_TOKEN }} >> .env
+
       - name: Build
-        env:
-          REVIEWS_PAGE_ID: ${{ secrets.REVIEWS_PAGE_ID }}
-          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
         run: |
           npm ci
           npm run build
