--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - dev
+
+env:
+  REVIEWS_PAGE_ID: ${{ secrets.REVIEWS_PAGE_ID }}
+  NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+
 jobs:
   check-pull-request:
     runs-on: ubuntu-latest
@@ -11,12 +16,6 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
-
-      - name: create .env file
-        run: |
-          touch .env
-          echo REVIEWS_PAGE_ID=${{ secrets.REVIEWS_PAGE_ID }} >> .env
-          echo NOTION_TOKEN=${{ secrets.NOTION_TOKEN }} >> .env
 
       - name: Build
         run: |
