--- a/.github/workflows/check-pull-request.yaml
+++ b/.github/workflows/check-pull-request.yaml
@@ -8,7 +8,7 @@ jobs:
   check-pull-request:
     runs-on: ubuntu-latest
     environment: github-pages
-
+    
     steps:
       - name: Checkout # check out the source code of repo branch dev into runner then run command against the source code below
         uses: actions/checkout@v2.3.1
@@ -16,6 +16,9 @@ jobs:
           persist-credentials: false
 
       - name: Build
+        env:
+          REVIEWS_PAGE_ID: ${{ secrets.REVIEWS_PAGE_ID }}
+          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
         run: |
           npm ci
           npm run build
