update workflow yaml files

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Build
         env:
           REVIEWS_PAGE_ID: ${{ secrets.REVIEWS_PAGE_ID }}
+          MISC_PAGE_ID: ${{ secrets.MISC_PAGE_ID }}
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
         run: |
           npm ci
